@@ -1,128 +1,0 @@
-/*
- * Copyright (C) 2001-2006 Jacek Sieka, arnetheduck on gmail point com
- *
- * This program is free software; you can redistribute it and/or modify
- * it under the terms of the GNU General Public License as published by
- * the Free Software Foundation; either version 2 of the License, or
- * (at your option) any later version.
- *
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU General Public License for more details.
- *
- * You should have received a copy of the GNU General Public License
- * along with this program; if not, write to the Free Software
- * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
- */
-
-#if !defined(CONFIG_H)
-#define CONFIG_H
-
-#if _MSC_VER > 1000
-#pragma once
-#endif // _MSC_VER > 1000
-
-#ifdef HAVE_CONFIG_H
-#include "autoconf.h"
-#endif
-
-// Remove this line if hashes are not available in your stl
-#define HAVE_HASH 1
-
-// This enables stlport's debug mode (and slows it down to a crawl...)
-//#define _STLP_DEBUG 1
-//#define _STLP_USE_NEWALLOC 1
-
-// --- Shouldn't have to change anything under here...
-
-#ifndef _REENTRANT
-# define _REENTRANT 1
-#endif
-
-#ifdef HAVE_STLPORT
-# define _STLP_DONT_USE_SHORT_STRING_OPTIM 1	// Lots of memory issues with this undefined...wonder what's up with that..
-# define _STLP_USE_PTR_SPECIALIZATIONS 1
-# define _STLP_NO_ANACHRONISMS 1
-# define _STLP_NO_CUSTOM_IO 1
-# define _STLP_NO_IOSTREAMS 1
-# ifndef _DEBUG
-#  define _STLP_DONT_USE_EXCEPTIONS 1
-# endif
-#endif
-
-//#if defined(_MSC_VER) || defined(WIN32) 
-# pragma warning(disable: 4711) // function 'xxx' selected for automatic inline expansion
-# pragma warning(disable: 4786) // identifier was truncated to '255' characters in the debug information
-# pragma warning(disable: 4290) // C++ Exception Specification ignored
-# pragma warning(disable: 4127) // constant expression
-# pragma warning(disable: 4710) // function not inlined
-# pragma warning(disable: 4503) // decorated name length exceeded, name was truncated
-
-//# if 1
-typedef signed __int8 int8_t;
-typedef signed __int16 int16_t;
-typedef signed __int32 int32_t;
-typedef signed __int64 int64_t;
-
-typedef unsigned __int8 uint8_t;
-typedef unsigned __int16 uint16_t;
-typedef unsigned __int32 uint32_t;
-typedef unsigned __int64 uint64_t;
-
-//# endif
-
-//#endif
-
-#if defined(_MSC_VER)
-#define _LL(x) x##ll
-#define _ULL(x) x##ull
-#define I64_FMT "%I64d"
-#define U64_FMT "%I64d"
-
-#elif defined(SIZEOF_LONG) && SIZEOF_LONG == 8
-#define _LL(x) x##l
-#define _ULL(x) x##ul
-#define I64_FMT "%ld"
-#define U64_FMT "%ld"
-#else
-#define _LL(x) x##ll
-#define _ULL(x) x##ull
-#define I64_FMT "%lld"
-#define U64_FMT "%lld"
-#endif
-
-#ifdef _WIN32
-
-# define PATH_SEPARATOR '\\'
-# define PATH_SEPARATOR_STR "\\"
-
-#else
-
-# define PATH_SEPARATOR '/'
-# define PATH_SEPARATOR_STR "/"
-
-#endif
-
-#ifdef _MSC_VER
-
-# ifndef CDECL
-#  define CDECL _cdecl
-# endif
-
-#else // _MSC_VER
-
-# ifndef CDECL
-#  define CDECL
-# endif
-
-#endif // _MSC_VER
-
-#define BZ_NO_STDIO
-
-#ifdef _WIN32
-# define _WIN32_WINNT 0x0501
-# define _WIN32_IE	0x0500
-#endif
-
-#endif // !defined(CONFIG_H)
