@@ -3,6 +3,7 @@ Revision history for Perl extension TigerHash.
 0.03 2010-11-17
 	now getting cpp lib from 
 	git://github.com/negativ/eiskaltdcpp.git
+	can buld in windows in strabwerry (mingw)
 
 0.02 2009 01 26
 	cleaned
